# errant-fox

./: .env.example  .gitignore  .mcp.json  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  PROJECT_DOCS.md  README.md  deploy.md  docker-compose.dev.yml  docker-compose.yml  llms.txt  nginx.conf  project_errant_fox.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  exchange_viewer_target.html
backend/migrations/0001_initial/: down.sql  up.sql
backend/migrations/0002_comment_reactions/: up.sql
backend/migrations/0003_comment_bout_search/: down.sql  up.sql
backend/migrations/0004_technique_description/: down.sql  up.sql
backend/migrations/0005_video_fps/: down.sql  up.sql
backend/migrations/0006_user_vk_id/: down.sql  up.sql
backend/migrations/0007_bout_history/: down.sql  up.sql
backend/migrations/0008_guest_comments/: down.sql  up.sql
backend/migrations/0009_user_role/: up.sql
backend/migrations/0010_ai_label/: down.sql  up.sql
backend/migrations/0011_video_is_analyzing/: up.sql
backend/migrations/0012_bout_is_ai/: down.sql  up.sql
backend/migrations/0013_video_is_queued/: down.sql  up.sql
backend/migrations/0014_comment_drawing/: down.sql  up.sql
backend/migrations/0015_remove_comment_bout_id/: up.sql
backend/src/: config.rs  errors.rs  main.rs  previews.rs  s3.rs  seafile.rs  state.rs  sync.rs  ws.rs
backend/src/api/: auth.rs  bouts.rs  comments.rs  mod.rs  techniques.rs  users.rs  videos.rs
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/middleware/: auth.rs
backend/src/services/: ai_queue.rs  mod.rs  (+6 more)
(+170 files in other folders)
