[package]
name = "errant_fox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
regex = "1"
tokio-tungstenite = "0.26"
